style.css
@import url(reset.css);
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

body {
    font-size: 1.6rem;
    height: 100vh;
    font-family: 'Roboto', sans-serif;
}

ul {
    list-style-type: none;
}

.main-grid {
    display: grid;
    height: 100%;
    grid-template-columns: 250px 3fr;
}

.right-side {
    grid-column: 2 / span 1;
    display: grid;
    grid-template-rows: 1fr 4fr;
}

.dashboard {
    background-color: rgb(87, 147, 238);
    padding: 10px 0 0 20px;
    color: white;
    display: grid;
    align-content: start;
    gap: 40px;

    &>ul {
        padding: 0;
        font-weight: 700;
        font-size: 2.0rem;
        display: grid;
        gap: 10px;
    }
}

.header {
    display: grid;
    grid-template-columns: 2fr 1fr;
    grid-template-rows: 1fr 1.7fr;
    padding: 0 50px;
}

.search-bar {
    display: flex;
    align-items: center;
    gap: 10px;

    >input {
        height: 30px;
        border-radius: 20px;
        flex: 1;
        max-width: 90%;
    }
}

.user-name {
    font-weight: 900;
}

.header>ul:first-of-type {
    display: flex;
    align-items: center;
    justify-content: end;
    gap: 30px;
}

#small-pfp {
    aspect-ratio: 1;
    height: 45px;
    border-radius: 30px;
}

.header .hi-there {
    display: grid;
    grid-template-columns: auto 1fr;
    grid-template-rows: 1fr 1fr;

    >#big-pfp {
        grid-row: 1 / span 2;
        place-self: center;
        aspect-ratio: 1;
        height: 80px;
        border-radius: 50px;
        margin-right: 20px;
    }
}

.hi-there>div {
    grid-row: 1 /span 2;
    display: grid;

    > :first-child {
        align-self: end;
        font-weight: 700;
    }

    > :last-child {
        font-size: 2.0rem;
    }
}

.header>.buttons {
    display: flex;
    gap: 10px;
    align-items: center;
    justify-content: space-between;
    padding: 0;

    & button {
        border-radius: 20px;
        background-color: rgb(75, 153, 255);
        color: white;
        border: 0;
        width: 100px;
        height: 40px;
    }

}

.main {
    background-color: rgb(199, 212, 218);
}

